Left panel: alignments, Tribes: minor fixes

--- a/media/base.css
+++ b/media/base.css
@@ -123,6 +123,9 @@ table {
 	left: 200px;
 	overflow: hidden;
 }
+#col2 img {
+    vertical-align: middle
+}
 
 #col3 {
 	float: left;
